@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.iidm.network.tck;
 
@@ -11,7 +12,6 @@ import com.powsybl.iidm.network.*;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -58,20 +58,12 @@ public abstract class AbstractSwitchSetRetainedTest {
         Switch b1 = network.getSwitch("B1");
         assertNotNull(b1);
 
-        VariantManager variantManager = network.getVariantManager();
-        variantManager.allowVariantMultiThreadAccess(true);
-        variantManager.cloneVariant(VariantManagerConstants.INITIAL_VARIANT_ID, "backup");
-
         assertTrue(b1.isRetained());
         assertEquals(2, Iterables.size(vl.getBusBreakerView().getBuses()));
 
         b1.setRetained(false);
         assertFalse(b1.isRetained());
         assertEquals(1, Iterables.size(vl.getBusBreakerView().getBuses()));
-
-        variantManager.setWorkingVariant("backup");
-        assertTrue(b1.isRetained());
-        assertEquals(2, Iterables.size(vl.getBusBreakerView().getBuses()));
     }
 
     @Test
@@ -85,16 +77,16 @@ public abstract class AbstractSwitchSetRetainedTest {
         assertTrue(b1.isRetained());
         assertFalse(b1.isOpen());
 
-        List<Bus> buses0 = vl.getBusBreakerView().getBusStream().collect(Collectors.toList());
+        List<Bus> buses0 = vl.getBusBreakerView().getBusStream().toList();
 
         b1.setOpen(true);
 
-        List<Bus> buses1 = vl.getBusBreakerView().getBusStream().collect(Collectors.toList());
+        List<Bus> buses1 = vl.getBusBreakerView().getBusStream().toList();
         assertEquals(buses0, buses1);
 
         b1.setOpen(false);
 
-        List<Bus> buses2 = vl.getBusBreakerView().getBusStream().collect(Collectors.toList());
+        List<Bus> buses2 = vl.getBusBreakerView().getBusStream().toList();
         assertEquals(buses0, buses2);
     }
 }
