@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.loadflow;
 
@@ -11,8 +12,6 @@ import com.google.common.jimfs.Jimfs;
 import com.powsybl.commons.config.InMemoryPlatformConfig;
 import com.powsybl.commons.config.MapModuleConfig;
 import com.powsybl.commons.parameters.Parameter;
-import com.powsybl.commons.report.ReportNode;
-import com.powsybl.computation.ComputationManager;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.loadflow.json.JsonLoadFlowParametersTest;
 import com.powsybl.loadflow.json.JsonLoadFlowParametersTest.DummyExtension;
@@ -24,9 +23,11 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -42,7 +43,7 @@ class LoadFlowProviderTest {
     void testParametersExtension() throws IOException {
         LoadFlowProvider provider = new LoadFlowProviderMock();
         assertEquals(3, provider.getSpecificParameters().size());
-        assertEquals(List.of("parameterDouble", "parameterBoolean", "parameterString"), provider.getSpecificParameters().stream().map(Parameter::getName).collect(Collectors.toList()));
+        assertEquals(List.of("parameterDouble", "parameterBoolean", "parameterString"), provider.getSpecificParameters().stream().map(Parameter::getName).toList());
         assertSame(DummyExtension.class, provider.getSpecificParametersClass().orElseThrow());
         try (FileSystem fileSystem = Jimfs.newFileSystem(Configuration.unix())) {
             InMemoryPlatformConfig platformConfig = new InMemoryPlatformConfig(fileSystem);
@@ -65,8 +66,9 @@ class LoadFlowProviderTest {
     @Test
     void abstractLoadFlowProviderTest() throws IOException {
         var provider = new AbstractNoSpecificParametersLoadFlowProvider() {
+
             @Override
-            public CompletableFuture<LoadFlowResult> run(Network network, ComputationManager computationManager, String workingVariantId, LoadFlowParameters parameters, ReportNode reportNode) {
+            public CompletableFuture<LoadFlowResult> run(Network network, String workingStateId, LoadFlowRunParameters runParameters) {
                 return null;
             }
 
@@ -89,5 +91,23 @@ class LoadFlowProviderTest {
         assertTrue(provider.createMapFromSpecificParameters(new JsonLoadFlowParametersTest.DummyExtension()).isEmpty());
         provider.updateSpecificParameters(new JsonLoadFlowParametersTest.DummyExtension(), Map.of());
         assertTrue(provider.getSpecificParameters().isEmpty());
+    }
+
+    @Test
+    void testConfiguredParameters() throws IOException {
+        LoadFlowProvider provider = new LoadFlowProviderMock();
+        try (FileSystem fileSystem = Jimfs.newFileSystem(Configuration.unix())) {
+            InMemoryPlatformConfig platformConfig = new InMemoryPlatformConfig(fileSystem);
+            List<Parameter> baseSpecificParameters = provider.getSpecificParameters();
+            assertEquals(6.4, baseSpecificParameters.get(0).getDefaultValue());
+            assertEquals(false, baseSpecificParameters.get(1).getDefaultValue());
+            assertEquals("yes", baseSpecificParameters.get(2).getDefaultValue());
+            MapModuleConfig moduleConfig = platformConfig.createModuleConfig("dummy-extension");
+            moduleConfig.setStringProperty("parameterDouble", "3.14");
+            List<Parameter> configuredSpecificParameters = provider.getSpecificParameters(platformConfig);
+            assertEquals(3.14, configuredSpecificParameters.get(0).getDefaultValue());
+            assertEquals(false, configuredSpecificParameters.get(1).getDefaultValue());
+            assertEquals("yes", configuredSpecificParameters.get(2).getDefaultValue());
+        }
     }
 }
