@@ -3,17 +3,17 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.loadflow.validation;
 
-import com.google.common.base.Supplier;
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableList;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.ServiceLoader;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 /**
  * Provides access to the list of known candidate computations.
@@ -31,6 +31,7 @@ public final class CandidateComputations {
 
     /**
      * Get the list of all known candidate computations implementations.
+     * The returned list is immutable.
      */
     public static List<CandidateComputation> getComputations() {
         return COMPUTATIONS.get();
@@ -38,9 +39,10 @@ public final class CandidateComputations {
 
     /**
      * Get the list of all known candidate computations names.
+     * The returned list is immutable.
      */
     public static List<String> getComputationsNames() {
-        return getComputations().stream().map(CandidateComputation::getName).collect(Collectors.toList());
+        return getComputations().stream().map(CandidateComputation::getName).toList();
     }
 
     /**
